fix segment tree color in dark mode

--- a/frontend/stylesheets/dark.less
+++ b/frontend/stylesheets/dark.less
@@ -36,6 +36,11 @@ a:hover {
   background-color: @black;
 }
 
+.ant-tree-show-line .ant-tree-switcher {
+  // Fixes incorrect background color in segments tree view.
+  background: @black;
+}
+
 // Change the bright versions to dark, too
 .icon-sidebar-hide-left-bright {
   background-image: url(/assets/images/icon-sidebar-hide-left-dark.svg);
